# LLM-RAG-Ollama-Bank

./: README.md  pyproject.toml  requirements.txt
data/: bank_rules.txt
data/chroma_db_dir/b3c97b70-679c-4efc-b764-7a87b0a5a7f3/: index_metadata.pickle
notebooks/: demoRAGOllama.ipynb  resultados_pruebas.csv  resultados_test.csv
notebooks/bank_data_db/41a23177-9ac9-4f48-8e5a-c0f5557e695e/: index_metadata.pickle
notebooks/vector_db/62c2a82e-4d45-4aad-af26-eb8ab1a700b2/: index_metadata.pickle
src/: app.py  main.py  resultados_pruebas.csv
src/features/: cargador_datos_csv.py  custom_retriever.py  gestor_clientes.py  vector_store_manager.py
src/model/: sistema_rag.py
src/models/: evaluation_metrics.py  qa_system.py  rag_system.py
src/utils/: decorators.py  diagram.py  document_loader.py  document_manager.py  document_processor.py  logger_config.py  test_runner.py
src/vector_db/5abf89b5-4ba9-4c98-8e93-9ddfc243983c/: index_metadata.pickle
tests/: test_app.py  test_main.py
tests/features/: test_custom_retriever.py  test_vector_store_manager.py
tests/models/: test_evaluation_metrics.py  test_qa_system.py  test_rag_system.py
tests/utils/: test_data_processor.py  test_document_loader.py  test_document_manager.py  test_test_runner.py
