[tool.poetry]
name = "langchainragollama"
version = "0.1.0"
description = ""
authors = ["Adrian Infantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastembed = "^0.3.1"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
pymupdf = "^1.24.7"
chromadb = "^0.5.3"
jupyter = "^1.0.0"
jupyterlab = "^4.2.3"
streamlit = "^1.36.0"
nltk = "^3.8.1"
rouge = "^1.0.1"
matplotlib = "^3.9.1"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
